--- a/front/src/components/Footer/Footer.css
+++ b/front/src/components/Footer/Footer.css
@@ -1,3 +1,18 @@
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+
+  }
+
+.text-center{
+    margin-top: 0px!important;
+}
+
 .color-footer{
    background-color: red; 
 
