--- a/front/src/components/Navbar/Navbar.css
+++ b/front/src/components/Navbar/Navbar.css
@@ -12,6 +12,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     color: white;
 }
 
+
+
 /* header */
 
 .nomlogonav, .nomlogonav span {
@@ -24,7 +26,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     width: 100%;
     z-index: 999;
     height: 70px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, .15);
+    -moz-box-shadow: 10px 30px 50px 0px #9aff99;
+    -webkit-box-shadow: 10px 30px 50px 0px #9aff99;
+    -o-box-shadow: 10px 30px 50px 0px #9aff99;
+    box-shadow: 10px 30px 50px 0px #9aff99;
+    filter:progid:DXImageTransform.Microsoft.Shadow(color=#9aff99, Direction=161, Strength=50);
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    
 }
 
 .headers {
