--- a/front/src/components/Navbar/Navbar.css
+++ b/front/src/components/Navbar/Navbar.css
@@ -80,6 +80,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     
 }
 
+.rasta{
+    width: 70px;
+    height: 60px;
+    border-radius: 50%;
+}
 .menu{
     bottom: 10px;
 }
