--- a/front/src/components/Navbar/Navbar.css
+++ b/front/src/components/Navbar/Navbar.css
@@ -6,6 +6,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font: inherit;
     vertical-align: baseline;
     font-family: 'Nunito', sans-serif;
+    cursor: url(http://cur.cursors-4u.net/nature/nat-2/nat120.cur), auto !important;
+
 }
 
 .bla a {
