--- a/front/src/components/Css/Liens.css
+++ b/front/src/components/Css/Liens.css
@@ -8,24 +8,26 @@ body {
 }
 
 /*This is coded CSS rainbow*/
-.rainbow{
+
+.rainbow {
   display: flexbox;
   justify-content: center;
   align-items: center;
 }
 
-.div_img_part img{
-
+.div_img_part img {
   width: 300px;
   height: 300px;
   display: flex;
   justify-content: center;
-
 }
 
-.block-evenement-mid{
+.block-evenement-mid {
   padding: 15px;
-  margin-top: 10%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .rainbow:hover {
@@ -186,7 +188,7 @@ h1 span {
   animation: bounce .3s ease infinite alternate;
   font-family: 'Titan One', cursive;
   font-size: 55px;
-  color: #FFF;
+  color: #3e8113;
   text-shadow: 0 1px 0 #CCC, 0 2px 0 #CCC, 0 3px 0 #CCC, 0 4px 0 #CCC, 0 5px 0 #CCC, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent, 0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, .4);
 }
 
@@ -265,9 +267,50 @@ h1 span:nth-child(18) {
   }
 }
 
-.centre_titre {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin-top: 5%;
+
+@media (min-width: 992px) {
+  .centre_titre {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 5%;
+    
+  }
+
+  .centre-span{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 5%;
+    color: #3e8113;
+  }
+  
+}
+
+
+@media (min-width: 576px) and (max-width:991.98px) {
+
+  .centre_titre {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 5%;
+    font-size: 30px;
+    
+  }
+  
+}
+
+
+@media (max-width: 575.98px) {
+
+  .centre_titre {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 5%;
+    font-size: 20px;
+    
+  }
+ 
 }
