--- a/front/src/components/Evenement/Evenement/Evenement.css
+++ b/front/src/components/Evenement/Evenement/Evenement.css
@@ -1,3 +1,11 @@
 .contain-evenement-mid{
     color: black;
 }
+
+.title-center{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    color: green;
+    margin-top: 5%;
+}
